# jetbrains_boost_test_bug

./: CMakeLists.txt
src/main/: TestAThing.cpp  TestAThing.h
src/test/: test_thing.cpp
